--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -103,13 +103,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      
-      - name: Run playbook
-        uses: dawidd6/action-ansible-playbook@v2.5.0
+      - name: Set up Python 3.7
+        uses: actions/setup-python@v1
         with:
-          # Required, playbook filepath
-          playbook: ansible/playbooks/vs-code.yaml
-          directory: ./
-          key: ${{secrets.SSH_PRIVATE_KEY}}
-          inventory: ${{secrets.ANSIBLE_INVENTORY}}
+          python-version: 3.7
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install ansible==2.9.2 requests
+          pip install docker==4.4.4
+
+      - name: Run playbook
+        run: |
+          ansible-playbook --private-key ${{secrets.SSH_PRIVATE_KEY}} -i ${{secrets.ANSIBLE_INVENTORY}} ansible/playbooks/vs-code.yaml
